# SpaceGame

./: Cargo.toml
src/: addition_functions.rs  camera.rs  main.rs
src/bullet/: bullet.rs  bullet_factory.rs  bullet_maker_trait.rs  mod.rs
src/camera/: mod.rs
src/destruction/: health.rs  hitbox.rs  mod.rs
src/entities/: asteroid.rs  black_hole.rs  gravity_well.rs  gun.rs  mod.rs  object.rs  player.rs  thrusters.rs
src/entities/firearm/: bullet.rs  gun.rs  gun_plugin.rs  mod.rs
src/entities/firearm/bullet/: bullet.rs  bullet_factory.rs  bullet_maker_trait.rs  mod.rs
src/entities/player/: mod.rs
src/gravity/: gravity_2d.rs  gravity_plugin.rs  mod.rs
src/gun/: gun.rs  gun_plugin.rs  mod.rs
src/movement/: gravity.rs  linear_movement_2d.rs  mod.rs  rotational_movement_2d.rs
src/movement/velocity/: angular_velocity.rs  linear_acceleration.rs  linear_velocity.rs  mod.rs  temp.rs  throttle_velocity.rs
src/movement/velocity/acceleration/: linear_acceleration.rs
src/movement/velocity/accelereation/: mod.rs
src/plugins/: gravity_plugin.rs  gun_plugin.rs  mod.rs  thrusters_plugin.rs  world_wrap_plugin.rs
src/thrusters/: mod.rs  thrusters.rs  thrusters_plugin.rs
src/utillity/: forward.rs  gizmos.rs  mod.rs  timing.rs  wrap_map.rs
src/v2/: main.rs
