[package]
name = "MyFirstGame"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
# avian2d = "0.3.0"
bevy_asset_loader = "0.23.0"
bevy = {version="0.16.1", features = ["dynamic_linking","bevy_gltf","webgl2","png"]}
rand = "0.9.1"
# bevy-tnua = "0.24.0"
# bevy-tnua-avian2d = "0.5.0"
# bevy_ecs_ldtk = "0.11.0"
# bevy_ecs_tilemap = {version = "0.16.0", features = ["atlas","render"]}